syntax = "proto3";
import "google/api/annotations.proto";

option csharp_namespace = "PortalGrpc";
package UserGrpc;

service UserGrpcService {
    rpc GetUsers(UserRequest) returns (UsersReply)
    {
        option (google.api.http) =
        {
            get: "/v1/users"
        };
    }

    rpc SyncUserFromIdentity(SyncUserRequest) returns (SyncUserReply)
    {
        option (google.api.http) =
        {
            post: "/v1/users",
            body: "*"
        };
    }
}

message UserRequest {

}

message UsersReply {
    repeated UserReply userReply = 1;
}
message UserReply {
    string Id = 1;
    string FullName = 2;
    string IdentityId = 3;
}

message SyncUserRequest {
    string IdentityId = 1;
    string FullName = 2;
    string Email = 3;
    string UserName = 4;
    string Avatar = 5;
}

message SyncUserReply {
    int32 PortalId = 1;
    bool IsSuccess = 2;
    string Message = 3;
}